fix: add nowrap to white space for slot=label

--- a/components/select/src/styles/style.scss
+++ b/components/select/src/styles/style.scss
@@ -12,6 +12,10 @@
 
 /* stylelint-disable selector-class-pattern */
 
+[slot='label'] {
+  white-space: nowrap;
+}
+
 [slot='trigger'] {
   width: 100%;
   padding: 0;
